--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,16 +5,12 @@
         {
             "src": "index.js",
             "use": "@vercel/node"
-        },
-        {
-            "src": "src/**/*",
-            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/index.js"
         }
     ]
 }
