--- a/package.json
+++ b/package.json
@@ -1,32 +1,22 @@
 {
-  "name": "url-shortener",
+  "name": "url-shortener-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Frontend React application for URL shortener",
   "scripts": {
-    "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
     "axios": "^1.8.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "geoip-lite": "^1.4.10",
-    "git": "^0.1.5",
-    "mongoose": "^8.9.5",
-    "nanoid": "^5.0.9",
-    "nodemon": "^3.1.9",
-    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.0",
-    "useragent": "^2.3.0",
-    "vercel": "^41.1.4"
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -39,5 +29,13 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
-  }
+  },
+  "keywords": [
+    "url-shortener",
+    "react",
+    "vite",
+    "frontend"
+  ],
+  "author": "itxAman23",
+  "license": "MIT"
 }
